deploy/k8s/base/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crd-wizard
---
apiVersion: v1
kind: Service
metadata:
  name: crd-wizard
  namespace: crd-wizard
  labels:
    app.kubernetes.io/name: crd-wizard
    app.kubernetes.io/instance: crd-wizard
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: crd-wizard
    app.kubernetes.io/instance: crd-wizard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crd-wizard
  namespace: crd-wizard
  labels:
    app.kubernetes.io/name: crd-wizard
    app.kubernetes.io/instance: crd-wizard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: crd-wizard
      app.kubernetes.io/instance: crd-wizard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crd-wizard
        app.kubernetes.io/instance: crd-wizard
    spec:
      serviceAccountName: crd-wizard
      containers:
        - name: crd-wizard
          image: "ghcr.io/pehlicd/crd-wizard:latest"
          imagePullPolicy: IfNotPresent
          command:
            - crd-wizard
          args:
            - web
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crd-wizard
  namespace: crd-wizard
  labels:
    app.kubernetes.io/name: crd-wizard
    app.kubernetes.io/instance: crd-wizard
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crd-wizard
                port:
                  name: http
